Updated GitHub links.

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 		<br><br><br><hr>
 			<div class="credits text-center">
 				<p>
-					<a href="http://githublink.com">View source on GitHub!</a>
+					<a href="https://github.com/zackrzot/tsk">View source on GitHub!</a>
 				</p>
 				<p>
 					<a href="http://zackrzot.com">zackrzot.com</a>
