--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>tsk</title>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link href="app-content/app.css" rel="stylesheet" />
+		<link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
 		<img src="\public\img\tsk.png" alt="tsk" padding-bottom="10">
 	</head>
 	<body class="container">
