Connected the DB to the view for some simple actions. Incomplete changes that I would like to not lose in a freak accident.

--- a/app/tasks/index.html
+++ b/app/tasks/index.html
@@ -8,13 +8,15 @@
   <ul class="dropdown-menu" aria-labelledby="dropdownMenuView" id="dropdownMenuViewOptions"></ul>
 </div>
 
-<h2 id="activeTasksLabel">Active Tasks</h2>
-<ul class="list-group" id="activeTasks"></ul>
-<hr>
-<h2 id="inactiveTasksLabel">Inactive Tasks</h2>
-<ul class="list-group" id="inactiveTasks"></ul>
-<hr>
-<h2 id="completedTasksLabel">Completed Tasks</h2>
-<ul class="list-group" id="completedTasks"></ul>
+<div id="tasksContainer">
+	<h2 id="activeTasksLabel">Active Tasks</h2>
+	<ul class="list-group" id="activeTasks"></ul>
+	<hr>
+	<h2 id="inactiveTasksLabel">Inactive Tasks</h2>
+	<ul class="list-group" id="inactiveTasks"></ul>
+	<hr>
+	<h2 id="completedTasksLabel">Completed Tasks</h2>
+	<ul class="list-group" id="completedTasks"></ul>
+<div>
 <hr>
 
