--- a/app/create/index.html
+++ b/app/create/index.html
@@ -4,15 +4,15 @@
     <form method="post">
 		<div class="form-group">
             <label for="taskname">Task name: </label>
-            <input id="taskname" class="form-control" ng-model="vm.task.taskname" />
+            <input id="tasknameinput" class="form-control" required ng-model="vm.task.taskname" />
         </div>
 		<div class="form-group">
             <label for="taskdesc">Task description: </label>
-            <input id="taskdesc" class="form-control" ng-model="vm.task.taskdesc" />
+            <input id="taskdescinput" class="form-control" ng-model="vm.task.taskdesc" />
         </div>
 		<div class="form-group">
             <label for="taskactive">Create as active task: </label>
-			<input id="taskactive" type="checkbox" name="active" value="taskactive" ng-model="vm.task.taskactive" checked />
+			<input id="taskactiveinput" type="checkbox" name="active" value="taskactive" ng-model="vm.task.taskactive" checked />
         </div>
         <div class="form-group">
 			<button class="btn btn-primary" ng-click="vm.createTask()">Save</button>
