Added new CSS styles, made sure DB transactions completed before refreshing tasks for main task page, and removed logging.

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		<link href="app-content/app.css" rel="stylesheet" />
+		<link href="app-content/scheme.css" rel="stylesheet">
 		<link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
 		<img src="\public\img\tsk.png" alt="tsk" padding-bottom="10">
 	</head>
