Added views for different task page filters. Implemented delet all tasks.

--- a/app/tasks/inactive.html
+++ b/app/tasks/inactive.html
@@ -1,4 +1,4 @@
-﻿<h3>All Tasks:</h3>
+﻿<h3>Inactive Tasks:</h3>
 
 <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuView" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -9,13 +9,6 @@
 </div>
 
 <div id="tasksContainer">
-	<h2 id="activeTasksLabel">Active Tasks</h2>
-	<ul class="list-group" id="activeTasks"></ul>
-	<hr>
 	<h2 id="inactiveTasksLabel">Inactive Tasks</h2>
 	<ul class="list-group" id="inactiveTasks"></ul>
-	<hr>
-	<h2 id="completedTasksLabel">Completed Tasks</h2>
-	<button class="btn-sm btn-danger" ng-click="vm.confirmDeleteAllCompletedTasks()">Delete All</button>
-	<ul class="list-group" id="completedTasks"></ul>
 <div>
