--- a/app/account/index.html
+++ b/app/account/index.html
@@ -3,7 +3,7 @@
 <div class="form-container">
     <form method="post">
         <div class="form-group">
-            <h4>User:</h4>
+            <h4>Username:</h4>
 			<h2>{{vm.user.username}}</h2>
         </div>
 		<div class="form-group">
